// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountdownTimer Should render the component 1`] = `
<div
  className="timer-container"
>
  <div
    style={
      Object {
        "marginLeft": "-20px",
        "marginTop": "-20px",
      }
    }
  >
    <ReactCountdownClock
      alpha={0.9}
      color="#733EAB"
      font="Arial"
      fontSize="auto"
      onComplete={[MockFunction]}
      paused={false}
      seconds={30.445}
      showMilliseconds={false}
      size={270}
      timeFormat="hms"
    />
  </div>
  <div
    className="timer"
  >
    <div
      className="timer-inner"
    >
      <div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            1
          </div>
          <div
            className="timer-interval"
          >
            Days
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            4
          </div>
          <div
            className="timer-interval"
          >
            Hours
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            45
          </div>
          <div
            className="timer-interval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="timer-i"
      >
        <div
          className="timer-interval"
        >
          <strong>
            to start of tier 1 of 2
          </strong>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component showing only the seconds 1`] = `
<div
  className="timer-container"
>
  <div
    style={
      Object {
        "marginLeft": "-20px",
        "marginTop": "-20px",
      }
    }
  >
    <ReactCountdownClock
      alpha={0.9}
      color="#733EAB"
      font="Arial"
      fontSize="auto"
      onComplete={[MockFunction]}
      paused={false}
      seconds={30.445}
      showMilliseconds={false}
      size={270}
      timeFormat="hms"
    />
  </div>
  <div
    className="timer"
  >
    <div
      className="timer-inner"
    >
      <div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            45
          </div>
          <div
            className="timer-interval"
          >
            Mins
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            30
          </div>
          <div
            className="timer-interval"
          >
            Secs
          </div>
        </div>
      </div>
      <div
        className="timer-i"
      >
        <div
          className="timer-interval"
        >
          <strong>
            to start of tier 1 of 2
          </strong>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component showing the time until the end of the tier 1`] = `
<div
  className="timer-container"
>
  <div
    style={
      Object {
        "marginLeft": "-20px",
        "marginTop": "-20px",
      }
    }
  >
    <ReactCountdownClock
      alpha={0.9}
      color="#733EAB"
      font="Arial"
      fontSize="auto"
      onComplete={[MockFunction]}
      paused={false}
      seconds={30.445}
      showMilliseconds={false}
      size={270}
      timeFormat="hms"
    />
  </div>
  <div
    className="timer"
  >
    <div
      className="timer-inner"
    >
      <div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            1
          </div>
          <div
            className="timer-interval"
          >
            Days
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            4
          </div>
          <div
            className="timer-interval"
          >
            Hours
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            45
          </div>
          <div
            className="timer-interval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="timer-i"
      >
        <div
          className="timer-interval"
        >
          <strong>
            to end of tier 1 of 2
          </strong>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component when the crowdsale ended 1`] = `
<div
  className="timer-container"
>
  <div
    style={
      Object {
        "marginLeft": "-20px",
        "marginTop": "-20px",
      }
    }
  >
    <ReactCountdownClock
      alpha={0.9}
      color="#733EAB"
      font="Arial"
      fontSize="auto"
      onComplete={[MockFunction]}
      paused={false}
      seconds={30.445}
      showMilliseconds={false}
      size={270}
      timeFormat="hms"
    />
  </div>
  <div
    className="timer"
  >
    <div
      className="timer-inner"
    >
      <div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            1
          </div>
          <div
            className="timer-interval"
          >
            Days
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            4
          </div>
          <div
            className="timer-interval"
          >
            Hours
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            45
          </div>
          <div
            className="timer-interval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="timer-i"
      >
        <div
          className="timer-interval"
        >
          <strong>
            crowdsale has ended
          </strong>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component when the crowdsale was finalized 1`] = `
<div
  className="timer-container"
>
  <div
    style={
      Object {
        "marginLeft": "-20px",
        "marginTop": "-20px",
      }
    }
  >
    <ReactCountdownClock
      alpha={0.9}
      color="#733EAB"
      font="Arial"
      fontSize="auto"
      onComplete={[MockFunction]}
      paused={false}
      seconds={0}
      showMilliseconds={false}
      size={270}
      timeFormat="hms"
    />
  </div>
  <div
    className="timer"
  >
    <div
      className="timer-inner"
    >
      <div
        className="timer-i"
      >
        <div
          className="timer-interval"
        >
          <strong>
            crowdsale has been finalized
          </strong>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component with alternative message 1`] = `
<div
  className="timer-container"
>
  <div
    style={
      Object {
        "marginLeft": "-20px",
        "marginTop": "-20px",
      }
    }
  >
    <ReactCountdownClock
      alpha={0.9}
      color="#733EAB"
      font="Arial"
      fontSize="auto"
      onComplete={[MockFunction]}
      paused={false}
      seconds={30.445}
      showMilliseconds={false}
      size={270}
      timeFormat="hms"
    />
  </div>
  <div
    className="timer"
  >
    <div
      className="timer-inner"
    >
      <div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            1
          </div>
          <div
            className="timer-interval"
          >
            Days
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            4
          </div>
          <div
            className="timer-interval"
          >
            Hours
          </div>
        </div>
        <div
          className="timer-i"
        >
          <div
            className="timer-count"
          >
            45
          </div>
          <div
            className="timer-interval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="timer-i"
      >
        <div
          className="timer-interval"
        >
          <strong>
            to start of tier 1 of 2
          </strong>
          <div
            className="timer__altMessage"
          >
            Alternative Message
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
